update swagger and api endpoints
